HW1: Clean up files for submission

--- a/HW1/Q5/qn5.ipynb
+++ b/HW1/Q5/qn5.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "51.504 Machine Learning (Professional) \n",
+    "\n",
+    "HW1 Q5\n",
+    "\n",
+    "Victoria Yong 1004455"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -32,12 +43,7 @@
       " [1 1 1 1 1 1 1 1]\n",
       " [3 2 1 1 1 1 2 1]\n",
       " [3 2 1 2 2 3 1 2]\n",
-      " [3 1 3 4 3 4 3 3]\n",
-      " [1 1 1 1 1 1 1 1]\n",
-      " [1 1 1 1 1 1 1 1]\n",
-      " [4 4 3 4 3 4 3 4]\n",
-      " [5 5 1 4 2 5 5 4]\n",
-      " [4 2 2 1 1 4 1 4]]\n"
+      " [3 1 3 4 3 4 3 3]]\n"
      ]
     }
    ],
@@ -51,7 +57,7 @@
     "\n",
     "print(labels)\n",
     "print(data.shape)\n",
-    "print(data[:10])"
+    "print(data[:5])"
    ]
   },
   {
@@ -86,8 +92,8 @@
     "        Function to calculate linear regression model. \n",
     "\n",
     "        Takes in option argument where\n",
-    "            0: Closed form linear regression\n",
-    "            1: Closed form multivariate linear regression\n",
+    "            0: Closed form multivariate linear regression\n",
+    "            1: Closed form linear regression\n",
     "\n",
     "        Returns theta and predictions.\n",
     "        \"\"\"\n",
@@ -109,12 +115,7 @@
     "    def test(self):\n",
     "\n",
     "        \"\"\"\n",
-    "        Function to calculate linear regression model. \n",
-    "\n",
-    "        Takes in option argument where\n",
-    "            0: Closed form linear regression\n",
-    "            1: Closed form multivariate linear regression\n",
-    "\n",
+    "        Function to calculate linear regression model on test data.\n",
     "        Returns theta and predictions.\n",
     "        \"\"\"\n",
     "        if self.option == 0:\n",
@@ -139,6 +140,8 @@
     "        X: Input vector\n",
     "        y: Label vector\n",
     "        Returns predictions and theta as numpy array\n",
+    "\n",
+    "        Note: This didn't work well. Not sure why.\n",
     "        \"\"\"\n",
     "\n",
     "        n = X.shape[0]\n",
@@ -169,7 +172,7 @@
     "    \n",
     "    def _sse(self, y, preds):\n",
     "        \"\"\"\n",
-    "        Averaged residual sum of squares\n",
+    "        Averaged residual sum of squares, as requested by part c. This is basically the MSE.\n",
     "        Formula from wikipedia: https://en.wikipedia.org/wiki/Residual_sum_of_squares\n",
     "        \"\"\"\n",
     "        return sum(np.square((y - preds))) / y.shape[0]\n",
@@ -224,8 +227,7 @@
     "test_set = np.stack((np.ones(shape=test_set.shape), test_set), axis=1)\n",
     "\n",
     "print(train_set[:5], test_set[:5])\n",
-    "print(train_set.shape, test_set.shape)\n",
-    "\n"
+    "print(train_set.shape, test_set.shape)"
    ]
   },
   {
@@ -279,11 +281,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Comparing the averaged residual sum of squares (MSE) values for part b (train) and part c (test):\n",
+    "\n",
+    "    Train MSE: 0.4464\n",
+    "    Test MSE: 0.50071\n",
+    "The overall error values are close, which indicate that the model most likely generalizes well to this distribution."
+   ]
   }
  ],
  "metadata": {
